--- a/demo/Makefile.fpc
+++ b/demo/Makefile.fpc
@@ -14,6 +14,7 @@ dirs_linux=linux graph
 dirs_os2=os2 graph
 dirs_netware=netware
 dirs_netwlibc=netwlibc
+dirs_morphos=morphos
 
 [install]
 fpcpackage=y
