* call fpcmake with -Tcpu-os

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -1667,7 +1667,7 @@ ifdef FPCMAKE
 # a safety check is done if Makefile.fpc is available
 ifdef PACKAGE_VERSION
 ifneq ($(wildcard Makefile.fpc),)
-        $(FPCMAKE) -p -T$(OS_TARGET) Makefile.fpc
+        $(FPCMAKE) -p -T$(CPU_TARGET)-$(OS_TARGET) Makefile.fpc
         $(MKDIR) $(INSTALL_UNITDIR)
         $(INSTALL) Package.fpc $(INSTALL_UNITDIR)
 endif
