--- a/packages/base/Makefile.fpc
+++ b/packages/base/Makefile.fpc
@@ -6,7 +6,7 @@
 dirs=paszlib pasjpeg regexpr netdb md5
 dirs_linux=gdbint libasync mysql ibase postgres oracle odbc \
             pthreads sqlite libc
-dirs_win32=gdbint mysql ibase odbc sqlite
+dirs_win32=gdbint mysql ibase odbc sqlite postgres
 dirs_go32v2=gdbint
 dirs_netbsd=gdbint libasync \
             mysql ibase postgres oracle odbc 
